Bug 58842 - EDITING\QUERY: deleted distinct in sql view comes back when switch to design view
Summary: EDITING\QUERY: deleted distinct in sql view comes back when switch to design ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:4.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-28 21:26 UTC by Tamás Zolnai
Modified: 2012-12-29 10:52 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2012-12-28 21:26:39 UTC
Switching between sql and design view don't handle distinct as expected.

Steps to reproduce the bug:
1. Create a non-empty query in design view
2. Push distinct button on toolbar
3. Switch to sql view
4. Delete distinct from select statment
5. Switch back to design view

Recent bevahiour:
Distinct button is still active. If we switch to sql view again, then distinct will appear in select.

Expected behaviour:
Distinct button would be inactive and in case of switching to sql view, distinct would not be put back into select.
Comment 1 Not Assigned 2012-12-28 22:49:31 UTC
Zolnai Tamas committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9f82a20777b6d16b2ea541619c3ad270e08e258c

fdo#58842 Handle case of non-distinct statment



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.