fdo#58842 Handle case of non-distinct statment

Change-Id: I1797dd4e0bc6a2e4ec475c860e6b903085d2aae1